# cachedApp

./: README.md  skills-lock.json
.agents/skills/opentui/docs/: getting-started.mdx
.agents/skills/opentui/docs/bindings/: solid.mdx
.agents/skills/opentui/docs/core-concepts/: audio.mdx
.agents/skills/opentui/docs/keymap/: overview.mdx
.claude/skills/opentui/docs/reference/: env-vars.mdx
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  embeddings.py  main.py  schemas.py  seed.py  wallet.py  x402.py
backend/app/api/: __init__.py  data_core.py
backend/app/repositories/: __init__.py  data_core.py
backend/app/services/: __init__.py  ai.py  data_core.py  ingestion.py
backend/migrations/: 001_search.sql
backend/tests/: test_api.py  test_ingest_service.py  test_ingestion.py  test_search_service.py  test_x402.py
cli/: .env.example  .gitignore  README.md  bun.lockb  dev-backend.ts  index.ts  package.json  upload.test.ts
cli/src/: balance.ts  config.ts  home.ts  register.ts  ui.ts  upload.ts  uuid.ts
mcp/: bun.lockb  index.ts  package.json  tsconfig.json
plan/: byeori_plan.md  d0nghwa_plan.md
