[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cdp-sdk>=1.47.1",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
